@@ -1,6 +1,9 @@
 
 Drupal 7.17, xxxx-xx-xx (development version)
 -----------------------
+- Prevented duplicate HTML IDs from appearing when two forms are displayed on
+  the same page and one of them was submitted with invalid data (minor markup
+  change).
 - Fixed the theme settings form to properly clean up submitted values in
   $form_state['values'] when the form is submitted (data structure change).
 - Updated various admin tables to use the default "empty table" text UX
